fixed typo in SpecRunner

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -16,7 +16,7 @@
     <script src="src/fizzBuzz.js"></script>
 
     <!-- include spec files here... -->
-    <script src="spec/FetureSpec.js"></script>
+    <script src="spec/FeatureSpec.js"></script>
 
 
 </head>
