add Plane and Airport functions along with Specs

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Jasmine Spec Runner v2.5.2</title>
+    <title>Chris & Tom's - Jasmine Spec Runner v2.5.2</title>
 
     <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.5.2/jasmine_favicon.png">
     <link rel="stylesheet" href="lib/jasmine-2.5.2/jasmine.css">
@@ -13,10 +13,13 @@
     <script src="lib/jasmine-2.5.2/boot.js"></script>
 
     <!-- include source files here... -->
-    <script src="src/fizzBuzz.js"></script>
+    <script src="src/Plane.js"></script>
+    <script src="src/Airport.js"></script>
 
     <!-- include spec files here... -->
     <script src="spec/FeatureSpec.js"></script>
+    <script src="spec/PlaneSpec.js"></script>
+    <script src="spec/AirportSpec.js"></script>
 
 
 </head>
