--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Chris & Tom's - Jasmine Spec Runner v2.5.2</title>
+    <title>Chris & Amaals' - Jasmine Spec Runner v2.5.2</title>
 
     <link rel="shortcut icon" type="image/png" href="lib/jasmine-2.5.2/jasmine_favicon.png">
     <link rel="stylesheet" href="lib/jasmine-2.5.2/jasmine.css">
